# ai

./: .env  .env.example  .gitignore  AI_PROVIDER_ARCHITECTURE.md  ARCHITECTURE.md  CHAT_SERVICE_REFACTOR_SUMMARY.md  DATABASE_DESIGN.md  DEPLOYMENT.md  Dockerfile  FINAL_REPORT.md  INTERFACES.md  README.md  README_DIFY_PROVIDER.md  README_NEW.md  REFACTORING_SUMMARY.md  REFACTOR_SUMMARY.md  SIMPLE_CONTROLLER_SUMMARY.md  SYSTEM_STATUS_REPORT.md  app.py  app_factory.py  comparison_example.py  deploy.sh  docker-compose.yml  main.py  omni_ai_app.py  pyproject.toml  requirements.txt  test_dify_provider.py  test_openai_provider.py
adapters/: base.py  openai_adapter.py
api/v1/: __init__.py  chat.py  session.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/console/: __init__.py  chat.py
app/core/: __init__.py  config.py  database.py  deps.py  exceptions.py  middleware.py  redis.py
app/schemas/: __init__.py  chat.py  session.py  user.py  workspace.py
app/services/: __init__.py  auth.py  base.py  chat.py  session.py  user.py  workspace.py
config/: __init__.py  base.py  development.py  settings.py
controllers/: __init__.py  base_controller.py  chat_controller.py  session_controller.py
controllers/console/: __init__.py  chat.py  session.py  workspace.py
controllers/service_api/: __init__.py  chat.py
controllers/web/: __init__.py  chat.py  session.py
core/: extensions.py  middleware.py
core/model_providers/: __init__.py  base_provider.py  claude_provider.py  dify_provider.py  openai_provider.py  openai_provider_new.py
docs/: dify_provider_usage.md
examples/: dify_provider_example.py  provider_usage_example.py
extensions/: ext_blueprints.py
models/: __init__.py  chat_model.py  session_model.py  user_model.py
models/schemas/: __init__.py  ai_provider.py  base.py  chat.py  common.py  session.py  user.py  workspace.py
modules/chat/: chat_controller.py
services/: __init__.py  auth_service.py  base_service.py  chat_service.py  session_service.py  user_service.py  workspace_service.py
笔记/: dify是如何设计ai_model_provider.md
