# AI聊天系统项目配置
[project]
name = "ai-chat-system"
version = "1.0.0"
description = "统一AI聊天系统 - 支持多AI服务提供商的聊天接口"
readme = "README.md"
requires-python = ">=3.13"

# 项目依赖
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=4.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
]

# 开发依赖（可选）
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
